vlib/v/checker/tests/immutable_var.out
vlib/v/checker/tests/immutable_var.v:3:4: error: `a` is immutable, declare it with `mut` to assign to it
    1| fn main() {
    2|     a := 1
    3|     a = 2
             ^
    4| }
