vlib/v/checker/tests/immutable_var.vv
fn main() {
	a := 1
	a = 2
}
